--- a/public/bower.json
+++ b/public/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.4.x",
+    "angular": "1.5.5",
     "angular-animate": "1.4.x",
     "angular-aria": "1.4.x",
     "angular-cookies": "1.4.x",
